--- a/tools-common/pom.xml
+++ b/tools-common/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.derrors</groupId>
         <artifactId>pt-tools</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tools-data</artifactId>
+    <artifactId>tools-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -20,9 +20,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.derrors</groupId>
-            <artifactId>tools-common</artifactId>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
     </dependencies>
-
 </project>
