feat: 新增 Controller 启用 Web 功能

--- a/tools-app/pom.xml
+++ b/tools-app/pom.xml
@@ -17,4 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.derrors</groupId>
+            <artifactId>tools-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.derrors</groupId>
+            <artifactId>tools-data</artifactId>
+        </dependency>
+    </dependencies>
 </project>
