--- a/tools-app/pom.xml
+++ b/tools-app/pom.xml
@@ -26,5 +26,9 @@
             <groupId>com.derrors</groupId>
             <artifactId>tools-data</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        </dependency>
     </dependencies>
 </project>
