--- a/tools-app/src/main/resources/application-dev.yml
+++ b/tools-app/src/main/resources/application-dev.yml
@@ -14,10 +14,10 @@ spring:
 
 # mybatis plus
 mybatis-plus:
+  type-aliases-package: com.derrors.pt.tools
   mapper-locations: classpath:com/derrors/pt/tools/data/**/mapper/*Mapper.xml
   global-config:
     db-config:
-      id-type: auto                     # 主键类型
       logic-delete-field: is_deleted    # 逻辑删除配置
       logic-delete-value: 1
       logic-not-delete-value: 0
@@ -30,3 +30,9 @@ logging:
     org.springframework: info
   file:
     path: logs
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    operationsSorter: method
