--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>tools-data</module>
         <module>tools-app</module>
         <module>tools-common</module>
+        <module>tools-integration</module>
     </modules>
 
     <properties>
@@ -32,8 +33,7 @@
         <mysql-connector.version>8.2.0</mysql-connector.version>
         <mybatis-plus.version>3.5.5</mybatis-plus.version>
         <mybatis-spring.version>3.0.3</mybatis-spring.version>
-<!--        <mybatis-plus-generator.version>3.5.3.1</mybatis-plus-generator.version>-->
-
+        <webflux.version>3.2.1</webflux.version>
         <hutool.version>5.8.20</hutool.version>
 <!--        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>-->
 <!--        <maven.surefire.plugin.version>2.5</maven.surefire.plugin.version>-->
@@ -127,6 +127,11 @@
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>${springdoc-openapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-webflux</artifactId>
+                <version>${webflux.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
