--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <mybatis-spring.version>3.0.3</mybatis-spring.version>
         <webflux.version>3.2.1</webflux.version>
         <hutool.version>5.8.20</hutool.version>
+        <jsoup.version>1.17.2</jsoup.version>
 <!--        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>-->
 <!--        <maven.surefire.plugin.version>2.5</maven.surefire.plugin.version>-->
 <!--        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>-->
@@ -133,6 +134,12 @@
                 <artifactId>spring-boot-starter-webflux</artifactId>
                 <version>${webflux.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
