feat: 实现 HDAtmos、HDolby、Mteam、CarPt、Cyanbug 站点接入，实现签到、点赞、获取用户信息等功能

--- a/tools-app/src/main/resources/application-dev.yml
+++ b/tools-app/src/main/resources/application-dev.yml
@@ -37,7 +37,10 @@ springdoc:
   swagger-ui:
     operationsSorter: method
 
-http:
+https:
   client:
-    atmos:
-      url: https://hdatmos.club
+    mteam: https://kp.m-team.cc
+    atmos: https://hdatmos.club
+    dolby: https://www.hddolby.com
+    car: https://carpt.net
+    cyan: https://cyanbug.net
